--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,328 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background-color: rgba(246, 241, 235, 0.82);
+  margin: 0;
+  padding: 0;
+  color: #000;
+}
+
+nav,
+.offcanvas {
+  background-color: #1b772c;
+}
+.navbar-toggler {
+  border: none;
+}
+.navbar-toggler:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.brand img{
+    width: 115px;
+    height: 75px;
+}
+
+@media (max-width: 768px) {
+  .navbar-nav > li:hover {
+    background-color: #70b48b;
+  }
+}
+
+/*===================SLIDER DE IMAGENES==========================*/
+.carousel-inner {
+  max-height:30rem !important;
+}
+
+/*===================SECCION NUESTRO EQUIPO IMAGEN==========================*/
+
+#img-equipo{
+  max-height:35rem !important;
+  width:50%;
+}
+
+/*===================SECCION NUESTRO EQUIPO MAPA==========================*/
+#local {
+  margin-top:50px;
+  background-color: #f3f3f3;
+  display:flex;
+  justify-content: center;
+  padding-bottom: 300px;
+}
+
+.mapa {
+  width:100%;
+  height:500px;
+}
+
+.wrapper-local {
+  width:50%;
+  margin-left:100px;
+  padding-top:150px;
+}
+
+/*===========================SECCION ubicacion==================================*/
+#numeros-local{
+  margin:0 !important;
+  padding:0 !important;
+}
+#numeros-local div {
+  padding: 0 20px 0 0;
+  text-align:left;
+  height:48px;
+}
+
+#numeros-local div:not(:last-child) {
+  border-right: 2px solid #3f3f3f;
+}
+#numeros-local div:not(:first-child) {
+  padding-left:20px;
+}
+
+#numeros-local p{
+  margin:0;
+}
+
+/*=========================CONTACTOS BACKGROUND================================*/
+
+#bg-contactos{
+  position:relative;
+  top: -130px;
+}
+
+#seccion-contacto{
+  background-color: #1b2a4e;
+  min-height:500px;
+  position:relative;
+}
+
+/*=========================CONTACTOS FORMULARIO================================*/
+
+#contenedor-formulario{
+  position:absolute;
+  top:30%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  background: #fbfafa;
+  border-radius:5px;
+
+}
+
+#titulo-formulario {
+  color: #3f3f3f;
+}
+
+
+/*=========================FOOTER================================*/
+
+footer {
+  background: #1b772c;
+  min-height: 100px;;
+}
+footer p{
+  color:#f3f3f3;
+  text-align:center;
+}
+#iconos  i {
+  font-size: 26px;
+  padding: 0 8px;
+  color:#f3f3f3;
+}
+
+/*=========================MEDIA QUERIES PANTALLA ANCHA================================*/
+
+@media (max-width:1200px){
+  #intro, #equipo {
+    width:90% !important;
+    margin:auto;
+  }
+
+  #local {
+    flex-wrap: wrap;
+    padding-top:30px;
+  }
+  .wrapper-local {
+    width:90%;
+    margin:auto;
+    padding-top:50px;
+  }
+
+}
+/*=========================MEDIA QUERIES PANTALLA SM================================*/
+
+
+@media (max-width:768px) {
+
+  #intro, #equipo{
+    width:90% !important;
+    margin:auto;
+  }
+
+
+  #img-equipo{
+    max-height:20rem !important;
+    width:90%;
+  }
+  .wrapper-local {
+    width:90%;
+    margin:auto;
+    padding-top:50px;
+  }
+  #local {
+    flex-wrap: wrap;
+  }
+  .mapa img {
+    width:100%;
+    height:auto;
+  }
+  #bg-contactos{
+    top: -120px;
+  }
+
+
+}
+/*=========================MEDIA QUERIES PANTALLA EXTRA-SM================================*/
+
+@media (max-width: 576px) {
+  #servicios-fila-2 {
+    width:100% !important;
+  }
+  #servicios-fila-1 {
+    width:100% !important;
+  }
+
+  .icono-wrap{
+    flex-wrap:wrap !important;
+    justify-content: center !important;
+    text-align: center;
+  }
+}
+
+/*====================================SERVICIOS 1==============0*/
+.container-card{
+  width: 100%;
+  display: flex;
+  max-width: 1100px;
+  margin: auto;
+}
+.title-cards{
+  width: 100%;
+  max-width: 1080px;
+  margin: auto;
+  padding: 20px;
+  margin-top: 20px;
+  text-align: center;
+  color: #7a7a7a;
+}
+.card{
+  width: 100%;
+  margin: 20px;
+  border-radius: 6px;
+  overflow: hidden;
+  background:#fff;
+  box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+  transition: all 400ms ease-out;
+  cursor: default;
+}
+.card:hover{
+  box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+  transform: translateY(-3%);
+}
+.card img{
+  width: 100%;
+  height: 210px;
+}
+.card .contenido-card{
+  padding: 15px;
+  text-align: center;
+}
+.card .contenido-card h3{
+  margin-bottom: 15px;
+  color: #7a7a7a;
+}
+.card .contenido-card p{
+  line-height: 1.8;
+  color: #6a6a6a;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+.card .contenido-card a{
+  display: inline-block;
+  padding: 10px;
+  margin-top: 10px;
+  text-decoration: none;
+  color: #f1932b;
+  border: 1px solid #f1932b;
+  border-radius: 4px;
+  transition: all 400ms ease;
+  margin-bottom: 5px;
+}
+.card .contenido-card a:hover{
+  background: #f1932b;
+  color: #fff;
+}
+@media only screen and (min-width:320px) and (max-width:768px){
+  .container-card{
+    flex-wrap: wrap;
+  }
+  .card{
+    margin: 15px;
+  }
+}
+/*Fin-Cards*/
+
+
+/*===================GALERÍA==============0*/
+
+.container-img{
+  width: 100%;
+  max-width: 1100px;
+  margin: auto;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 250px;
+  grid-gap: 20px;
+}
+.container-img .box-img figure{
+  width: 100%;
+  height: 100%;
+}
+.container-img .box-img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.container-img .box-img:nth-child(1){
+  grid-column-start: span 2;
+}
+.container-img .box-img:nth-child(4){
+  grid-row-start: span 2;
+}
+@media screen and (max-width:800px){
+  .container-img{
+    width: 95%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    grid-template-rows: 200px;
+  }
+  .container-img .box-img:nth-child(1){
+    grid-column-start: span 1;
+  }
+}
+@media screen and (max-width:500px){
+  .container-img{
+    width: 90%;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .container-img .box-img img{
+    height: 200px;
+  }
+}
